--- a/slac_Backend/src/main/resources/application.properties
+++ b/slac_Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://slacdb.c3g9qdlqhwio.ap-south-1.rds.amazonaws.com;database=BasicEmpDB
+spring.datasource.url=jdbc:sqlserver://slacdb.c3g9qdlqhwio.ap-south-1.rds.amazonaws.com;database=MedifyDB
 spring.datasource.username=admin
 spring.datasource.password=slacDB2020
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
